fixes mobile logo issue and issue with social icons in the footer on mobile screen sizes. Closes issue #6

--- a/css/style.css
+++ b/css/style.css
@@ -155,3 +155,10 @@ img.header-logo {
 		font-size: 1em;
 	}
 }
+
+@media (max-width: 440px){
+	.footer-social img {
+		max-width: 50%;
+		padding: 2px;
+	}
+}
